...
    <string name="back">Back</string>
    <string name="bitwarden">Bitwarden</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copy_password">Copy password</string>
...
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="enter_pin">Enter your PIN code</string>
    <string name="favorites">Favorites</string>
    <string name="folder">Folder</string>
...
    <string name="log_in_verb">Log in</string>
    <string name="log_in_noun">Login</string>
    <string name="log_out">Log out</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="remove_account">Remove account</string>
...
    <string name="item_name_required">Item name (required)</string>
    <string name="send_name_required">"Send name (required)"</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="private_notes">Private notes</string>
...
    <string name="show">Show</string>
    <string name="item_deleted">Item deleted</string>
    <string name="submit">Submit</string>
    <string name="sync">Sync</string>
    <string name="uri">URI</string>
...
    <string name="verify_pin">Verify PIN</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="account">Account</string>
    <string name="account_created_success">Your new account has been created!</string>
...
    <string name="syncing_complete">Syncing complete</string>
    <string name="two_step_login">Two-step login</string>
    <string name="unlock_with_biometrics">Unlock with Biometrics</string>
    <string name="unlock_with_pin">Unlock with PIN code</string>
    <string name="verification_code">Verification code</string>
    <string name="view_login">View login</string>
...
    <string name="export_vault">Export vault</string>
    <string name="lock_now">Lock now</string>
    <string name="pin">PIN</string>
    <string name="unlock">Unlock</string>
    <string name="thirty_minutes">30 minutes</string>
...
    <string name="exit">Exit</string>
    <string name="exit_confirmation">Are you sure you want to exit Bitwarden?</string>
    <string name="require_master_password_on_app_restart">Require master password on app restart?</string>
    <string name="pin_require_master_password_restart">Do you want to require unlocking with your master password when the application is restarted?</string>
    <string name="ask_to_add_login">Ask to add login</string>
...
    <string name="resend_notification">Resend notification</string>
    <string name="view_all_login_options">View all log in options</string>
    <string name="pending_log_in_requests">Pending login requests</string>
    <string name="decline_all_requests">Decline all requests</string>
    <string name="are_you_sure_you_want_to_decline_all_pending_log_in_requests">Are you sure you want to decline all pending login requests?</string>
...
